# anchor

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js
app/: Form.module.css  globals.css  layout.tsx  page.tsx
app/auth/: Logout.tsx  Navbar.tsx  SignIn.tsx
app/components/: LinkSubmitForm.tsx
app/edit/: page.tsx
app/login/: page.tsx
app/profile/: page.tsx
app/register/: page.tsx
app/tags/: page.tsx
app/tags/[tag]/: page.tsx
assets/: index.html
helpers/: validate.js
pages/: Form.module.css  login.tsx  register.tsx
pages/api/: createLinks.ts  deleteLink.ts  editLinks.ts  getLinkData.ts  getLinks.ts  getTag.ts  getTags.ts  getUserLinks.ts
pages/api/auth/: [...nextauth].ts  signup.ts
pages/auth/: [...nextauth].js
pages/lib/: deleteLink.ts  getLinkData.ts  getLinks.ts  getTag.ts  getTags.ts  getUserLinks.ts
prisma/: client.ts  schema.prisma
prisma/migrations/20230312174833_init/: migration.sql
prisma/migrations/20230313175953_new_schema/: migration.sql
prisma/migrations/20230313181639_test/: migration.sql
prisma/migrations/20230313184421_rename_some_link_columns/: migration.sql
prisma/migrations/20230316143237_tags_and_links/: migration.sql
prisma/migrations/20230330190703_unique_constraint_tags/: migration.sql
prisma/migrations/20230330191934_unique_constraint_link/: migration.sql
prisma/migrations/20230330192556_unique_constraint_link_edit/: migration.sql
prisma/migrations/20230330192929_unique_constraint_removed/: migration.sql
src/: main.rs
